--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,4 +23,4 @@ jobs:
         context: .
         file: ./dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/user-back-apid:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/user-back-api:latest
